# RAGnify

./: .gitignore  app.py  pyproject.toml
Backend/: app.py  pyproject.toml  requirements.txt
Backend/faiss_store/: metadata.pkl
Backend/notebook/: document.ipynb  pdf_loader.ipynb
Backend/src/: data_loader.py  embedding.py  search.py
faiss_store/: faiss.index
notebook/: document.ipynb  pdf_loader.ipynb
src/: vectorStore.py
