[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.2.15",
    "langchain-core>=1.2.28",
    "langchain-community>=0.4.1",
    "pypdf>=6.10.0",
    "pymupdf>=1.27.2.2",
    "ipykernel>=7.2.0",
    "sentence-transformers>=5.4.1",
    "faiss-cpu>=1.13.2",
    "chromadb>=1.5.7",
    "langchain-text-splitters>=1.1.1",
    "transformers>=5.5.4",
    "torch>=2.11.0",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
